# saya_LLM

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  start-agent-llm.bat
app/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/scripts/: package-portable.ps1
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/commands/: benchmark.rs  config.rs  hardware.rs  image.rs  mod.rs  model.rs  server.rs  system.rs  updater.rs
app/src-tauri/src/models/: app_state.rs  benchmark.rs  hardware_info.rs  mod.rs  model_info.rs  server_config.rs
app/src-tauri/src/services/: auto_updater.rs  benchmark.rs  gguf_parser.rs  gpu_monitor.rs  memory_monitor.rs  mod.rs  model_scanner.rs  process_manager.rs
app/src/components/: ChatBubble.tsx  ColumnToggle.tsx  ConfirmDialog.tsx  MarkdownRenderer.tsx  ModelCard.tsx  ModelDownloadPanel.tsx  NumericTicker.tsx  SortDropdown.tsx  ThemeToggleButton.tsx  ToggleSwitch.tsx
app/src/context/: AppContext.tsx
app/src/hooks/: useSystemStats.ts
app/src/lib/: desktop.ts  llamaTools.ts  modelDefaults.ts  modelTheme.ts
app/src/pages/: ChatPage.tsx  HomePage.tsx  ImagePage.tsx  ModelLoadPage.tsx  SettingsPage.tsx  SystemStatusOverlay.tsx  ToolsPage.tsx  UsagePage.tsx
app/src/types/: index.ts
docs/: DEVELOPMENT_GUIDE.md  README.md  TECHNICAL_REPORT.md  tech-spec.md
(+7 files in other folders)
