[package]
name = "agent-llm"
version = "0.1.0"
description = "Agent LLM - local GGUF launcher with llama.cpp runner and hardware monitoring"
authors = ["sky"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"
keywords = ["llama", "llm", "tauri", "gguf", "gpu-monitoring"]
categories = ["command-line-utilities", "gui"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "time", "sync"] }
nvml-wrapper = "0.10"
sysinfo = "0.30"
regex = "1.10"
walkdir = "2.4"
rayon = "1.8"
anyhow = "1.0"
base64 = "0.22"
dirs = "5.0"
keyring = "3.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "multipart"] }
chrono = "0.4"
log = "0.4"
once_cell = "1.19"
sha2 = "0.10"
